fixed chat function, style changes to make sure likes don't overflow

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -19,7 +19,6 @@ html, body {
 
 #root, .container {
     height: 100%;
-    overflow: hidden;
 }
 
 .flex {
